Changelog for Processeditor
===========================

Todo: Work on #40 (Server: Implement EmumerationDialogEditor)

2019-02-17
* Added support for SSL config via www/config/ssl_config.properties
* Added file-system reading of "www/config/ssl_config.properties" first

2018-06-16
* Added constants for JSONExporter fields

2018-06-15
* Fixed #41 Core: Implement JSON Exporter for ProcessModel

2018-06-08
* Forced stereotype of EnumerationClass to only support <<enumeration>>

2018-05-30
* Added EnumerationClass to DomainModel
* Fixed bug in DomainClass that added a "(" to each default value