@@ -3,6 +3,9 @@ Changelog for Processeditor
 
 Todo: Work on #40 (Server: Implement EmumerationDialogEditor)
 
+2020-08-07
+* Fixed resizing of editor page
+
 2019-02-17
 * Added support for SSL config via www/config/ssl_config.properties
 * Added file-system reading of "www/config/ssl_config.properties" first
